[tool.poetry]
name = "pandanite"
version = "0.1.0"
description = ""
authors = ["Mr Pandabear <mrpanda@panda.panda>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pycryptodome = "^3.19.0"
ed25519 = "^1.5"
loguru = "^0.7.2"
mypy = "^1.7.1"
black = "^23.11.0"
pymongo = "^4.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "project"